--- a/core/templates/store/store_list.html
+++ b/core/templates/store/store_list.html
@@ -361,7 +361,7 @@
     <div class="d-flex justify-content-between align-items-center mb-2">
         <small id="storesCount" class="text-white-50"></small>
     </div>
-    <div class="row" id="storesGrid" data-page-size="6">
+    <div class="row mobile-horizontal-scroll stores-scroll" id="storesGrid" data-page-size="6">
         {% for store in stores %}
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="store-card">
